--- a/style.css
+++ b/style.css
@@ -1,17 +1,15 @@
-
 body{
     height:100%;
     width:100%;
     font-family: roboto;
     display:flex;
-  justify-content: center;
-    align-items: center;
+    justify-content: center;
+   align-items: center;
 }
 
 .aside-left, .content , .aside-right{
     width: 100px; 
     height: 50px; 
-    background-color: #f2f2f2;
     text-align: center;
 }
 
@@ -53,8 +51,8 @@ height:200px;
 
 
 /*Right side*/
-aside.right{
-    position:absolute;
+.aside-right  {
+    position:fixed; 
     width:250px;
     right:0px;
     
